--- a/html.html
+++ b/html.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css.css">.
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css.css">.
 </head>
+
 <body>
 
-    <div class="wap">
-        <div class="cloud"></div>
-        <div class="sun"></div>
-      </div>
-    <div class="container">
-        <p class="text" id="1">Example of Change over Time</p>
-      </div>
+  <div class="wap">
+
+    <div class="cloud"></div>
+
+    <div class="sun"></div>
+
+    <div class="landscape">
+
+      <div class="tree1"></div>
+      <div class="root1"></div>
+
+      <div class="tree2"></div>
+      <div class="root2"></div>
+
+      <div class="tree3"></div>
+      <div class="root3"></div>
+
+    </div>
+
+  </div>
+
 </body>
+
 </html>
